fixing header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
 @media print{
   .hdr.hdr{
     box-shadow: none;
-    padding: 0 5%;
+    padding: 0;
   }
 }
 
